updated customTitlesView and added icons

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,9 +24,9 @@
     z-index: 999999;
 }
 
-.body-no-scroll {
+/* .body-no-scroll {
     overflow: hidden !important;
-}
+} */
 
 .headline-clickable {
     cursor: pointer;
