changed badge size, added smaller avatar for endorsers

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,3 +42,7 @@
 .headline-modified {
     font-size: 70%;
 }
+
+.v-badge__badge {
+    inset: calc(100% - 10px) auto auto calc(100% - 10px) !important;
+}
