--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,3 +51,23 @@
 .interactable {
     cursor: pointer;
 }
+
+.rounded-edit-button {
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 40px;
+    height: 40px;
+    margin-left: 4px;
+    cursor: pointer;
+    box-shadow: 2px 2px 5px black
+}
+
+.title-background-light {
+    background-color: #F0F4C3;
+}
+
+.title-background-dark {
+    background-color: #AFB42B;
+}
