--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-[data-vuetify] .v-application--wrap {
+[data-vuetify-trustnet] .v-application--wrap {
     min-height: initial !important;
 }
 
@@ -108,28 +108,29 @@
     color: #827717  !important;
 }
 */
-[data-vuetify] .v-icon.v-icon {
+[data-vuetify-trustnet] .v-icon.v-icon {
     width: 15px !important;
 } 
 
 
-[data-vuetify] .v-badge__badge .v-icon {
+[data-vuetify-trustnet] .v-badge__badge .v-icon {
     font-size: 17px !important;
     inset: calc(100% - 11px) auto auto calc(100% - 15px);
     color: #827717  !important;
     height: 14px !important;
-  }
-  [data-vuetify] .assessor .v-badge__badge .v-icon {
-    inset: calc(100% - 14px) auto auto calc(100% - 13px); 
-  }
-  
-  [data-vuetify] .v-chip__content .v-avatar {
-    overflow: initial;
-  }
-  
-  [data-vuetify] .v-chip .v-badge__badge .v-icon {
-    transform: scale(0.8);
-  }
+}
+
+[data-vuetify-trustnet] .assessor .v-badge__badge .v-icon {
+inset: calc(100% - 14px) auto auto calc(100% - 13px); 
+}
+
+[data-vuetify-trustnet] .v-chip__content .v-avatar {
+overflow: initial;
+}
+
+[data-vuetify-trustnet] .v-chip .v-badge__badge .v-icon {
+transform: scale(0.8);
+}
 
 /* for removing the weird spacing inside the autocompletes which hold chips
 [data-vuetify] .v-select__selections {
@@ -174,6 +175,6 @@ These selectors have a high specificity and ensure that the fill will apply.*/
     position: relative;
 }
 
-[data-vuetify] .v-select__selections {
+[data-vuetify-trustnet] .v-select__selections {
     padding: 1%;
 }
